# dispatcher-plugin-integral

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/styles/: vocab.txt
.github/workflows/: python-app.yml
cdci_osa_plugin/: __init__.py  exposer.py  osa_catalog.py  osa_common_pars.py  osa_dataserve_dispatcher.py  osa_dispatcher.py  osa_fake.py  osa_fake_query.py  osa_image_dispatcher.py  osa_image_query.py  osa_instrument.py  osa_isgri.py  osa_jemx.py  osa_lightcurve_dispatcher.py  osa_lightcurve_query.py  osa_spectrum_dispatcher.py  osa_spectrum_query.py
cdci_osa_plugin/config_dir/: data_server_conf.yml
cdci_osa_plugin/tests/: test_isgri.py  test_jemx.py  test_osa.py
notebooks/: test_jemx_lc.ipynb
tests/: conftest.py  test_authorization.py  test_basic.py  test_isgri_plugin.py  test_jemx_plugin.py  test_old.py  test_unit.py
tests/data/dummy_prods/: isgri_query_lc.fits  isgri_query_mosaic.fits  query_catalog.fits
tests/data/dummy_prods_jemx/: jemx_query_catalog.fits  query_catalog.fits
